force-app/main/default/objects/System_Properties__c/System_Properties__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>System Properties</label>
</CustomObject>