force-app/main/default/objects/System_Properties__c/fields/Copado_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Copado_API_Key__c</fullName>
    <inlineHelpText>API Key for the user that Copado webhooks can use (e.g. to deploy a promotion).</inlineHelpText>
    <label>Copado API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>