force-app/main/default/objects/System_Properties__c/fields/Credit_Check_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Timeout__c</fullName>
    <defaultValue>60000</defaultValue>
    <inlineHelpText>Milliseconds that the AddCustomer Lightning Component will wait for Laser Credit Access to retrieve a credit report before timing out (defaults to 60 seconds). LCA waits 8 seconds to retrieve a report after Salesforce processes the future method.</inlineHelpText>
    <label>Credit Check Timeout</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>