force-app/main/default/objects/System_Properties__c/fields/CS_Auto_Lead_Conversion_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>CS_Auto_Lead_Conversion_Batch_Size__c</fullName>
    <description>See CSLeadsConverter, CSLeadConversionValidator</description>
    <inlineHelpText>Batch size for queueables in the &quot;Auto Lead Qualification &amp; Conversion&quot; process for Community Solar leads. Toggle this if limits are reached for existing batches. For reference, Lead conversion triggers UAS creation and a slew of other code, which if unoptimized, can result in batch failures if the batch size is too large.</inlineHelpText>
    <label>CS Auto Lead Conversion Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>