force-app/main/default/objects/System_Properties__c/fields/Customer_Care_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Email__c</fullName>
    <inlineHelpText>Holds address for sending email to customer care, used by the Forgot Password page</inlineHelpText>
    <label>Customer Care Email</label>
    <type>Email</type>
</CustomField>