force-app/main/default/objects/System_Properties__c/fields/Days_Generate_Bills_For_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Days_Generate_Bills_For_Cancelled__c</fullName>
    <label>Days Generate Bills For Cancelled</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>