force-app/main/default/objects/System_Properties__c/fields/Default_CS_Partner__c.field-meta.xml
<CustomField>
    <fullName>Default_CS_Partner__c</fullName>
    <inlineHelpText>ID for the Default CS Partner 
Sandbox: BlueWave Test Partner
Production: BlueWave Inside Sales</inlineHelpText>
    <label>Default CS Partner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>