force-app/main/default/objects/System_Properties__c/fields/Default_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Default_Partner_Account__c</fullName>
    <description>ID for the default partner Account.
Sandbox: BlueWave Test Partner
Production: BlueWave Inside Sales</description>
    <label>Default Partner Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>