force-app/main/default/objects/System_Properties__c/fields/Disable_AccountTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_AccountTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable AccountTrigger</label>
    <type>Checkbox</type>
</CustomField>