force-app/main/default/objects/System_Properties__c/fields/Disable_BillAdjustmentTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_BillAdjustmentTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable BillAdjustmentTrigger</label>
    <type>Checkbox</type>
</CustomField>