force-app/main/default/objects/System_Properties__c/fields/Disable_Client_Objects_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Client_Objects_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Client Objects Trigger</label>
    <type>Checkbox</type>
</CustomField>