force-app/main/default/objects/System_Properties__c/fields/Disable_ClientContractTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_ClientContractTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable ClientContractTrigger</label>
    <type>Checkbox</type>
</CustomField>