force-app/main/default/objects/System_Properties__c/fields/Disable_ContactTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_ContactTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable ContactTrigger</label>
    <type>Checkbox</type>
</CustomField>