force-app/main/default/objects/System_Properties__c/fields/Disable_ContentDocumentLinkTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_ContentDocumentLinkTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable ContentDocumentLinkTrigger</label>
    <type>Checkbox</type>
</CustomField>