force-app/main/default/objects/System_Properties__c/fields/Disable_ContractTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_ContractTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable ContractTrigger</label>
    <type>Checkbox</type>
</CustomField>