force-app/main/default/objects/System_Properties__c/fields/Disable_CreditReportLogTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_CreditReportLogTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable CreditReportLogTrigger</label>
    <type>Checkbox</type>
</CustomField>