force-app/main/default/objects/System_Properties__c/fields/Disable_EmailMessageTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_EmailMessageTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable EmailMessageTrigger</label>
    <type>Checkbox</type>
</CustomField>