force-app/main/default/objects/System_Properties__c/fields/Disable_Journal_Entry_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Journal_Entry_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Journal Entry Trigger</label>
    <type>Checkbox</type>
</CustomField>