force-app/main/default/objects/System_Properties__c/fields/Disable_LeadTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_LeadTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable LeadTrigger</label>
    <type>Checkbox</type>
</CustomField>