force-app/main/default/objects/System_Properties__c/fields/Disable_OpportunityTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_OpportunityTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable OpportunityTrigger</label>
    <type>Checkbox</type>
</CustomField>