force-app/main/default/objects/System_Properties__c/fields/Disable_PartnerSSSEligibilityTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_PartnerSSSEligibilityTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables the PartnerSharedSolarSystemEligibilityTrigger</inlineHelpText>
    <label>Disable PartnerSSSEligibilityTrigger</label>
    <type>Checkbox</type>
</CustomField>