force-app/main/default/objects/System_Properties__c/fields/Disable_ProductionTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_ProductionTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable ProductionTrigger</label>
    <type>Checkbox</type>
</CustomField>