force-app/main/default/objects/System_Properties__c/fields/Disable_ScheduleZTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_ScheduleZTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable ScheduleZTrigger</label>
    <type>Checkbox</type>
</CustomField>