force-app/main/default/objects/System_Properties__c/fields/Disable_SharedSolarSystemOrder_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_SharedSolarSystemOrder_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable SharedSolarSystemOrder Trigger</label>
    <type>Checkbox</type>
</CustomField>