force-app/main/default/objects/System_Properties__c/fields/Disable_SharedSolarSystemSharingTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_SharedSolarSystemSharingTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable SharedSolarSystemSharingTrigger</label>
    <type>Checkbox</type>
</CustomField>