force-app/main/default/objects/System_Properties__c/fields/Disable_SharedSolarSystemTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_SharedSolarSystemTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable SharedSolarSystemTrigger</label>
    <type>Checkbox</type>
</CustomField>