force-app/main/default/objects/System_Properties__c/fields/Disable_TransferTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_TransferTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable TransferTrigger</label>
    <type>Checkbox</type>
</CustomField>