force-app/main/default/objects/System_Properties__c/fields/Disable_UASBTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_UASBTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Deactivates the UASBTrigger and RecurringPaymentsHandler</inlineHelpText>
    <label>Disable UASBTrigger</label>
    <type>Checkbox</type>
</CustomField>