force-app/main/default/objects/System_Properties__c/fields/Disable_UtilityAccountLogTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_UtilityAccountLogTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable UtilityAccountLogTrigger</label>
    <type>Checkbox</type>
</CustomField>