force-app/main/default/objects/System_Properties__c/fields/Disable_UtilityDataRequestTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_UtilityDataRequestTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable UtilityDataRequestTrigger</label>
    <type>Checkbox</type>
</CustomField>