force-app/main/default/objects/System_Properties__c/fields/Disable_UtilityTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_UtilityTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable UtilityTrigger</label>
    <type>Checkbox</type>
</CustomField>