force-app/main/default/objects/System_Properties__c/fields/Disable_ZInvoiceTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_ZInvoiceTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable ZInvoiceTrigger</label>
    <type>Checkbox</type>
</CustomField>