force-app/main/default/objects/System_Properties__c/fields/Disable_ZuoraPaymentTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_ZuoraPaymentTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable ZuoraPaymentTrigger</label>
    <type>Checkbox</type>
</CustomField>