force-app/main/default/objects/System_Properties__c/fields/DocuSign_API_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_API_Account_ID__c</fullName>
    <inlineHelpText>DocuSign API Account ID (https://admindemo.docusign.com/api-integrator-key) e.g. 2255b4dd-7d4f-425a-bcc9-d53328055381</inlineHelpText>
    <label>DocuSign API Account ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>