force-app/main/default/objects/System_Properties__c/fields/DocuSign_Customer_Care_User__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Customer_Care_User__c</fullName>
    <inlineHelpText>The DocuSign user that the DocuSign user will send documents on behalf of. It should be customercare@bluewavesolar.com in production, but could be different if pointed to a developer sandbox.</inlineHelpText>
    <label>DocuSign Customer Care User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>