force-app/main/default/objects/System_Properties__c/fields/DocuSign_Guest_User__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Guest_User__c</fullName>
    <inlineHelpText>The user which the Apply Guest User logs into DocuSign with. It needs to have the Sender and Send on Behalf Of permission set: https://docs.docusign.com/esign/guide/authentication/sobo.html</inlineHelpText>
    <label>DocuSign Guest User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>