force-app/main/default/objects/System_Properties__c/fields/DocuSign_Guest_User_Credential__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Guest_User_Credential__c</fullName>
    <inlineHelpText>The Password for the guest user</inlineHelpText>
    <label>DocuSign Guest User Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>