force-app/main/default/objects/System_Properties__c/fields/DocuSign_Integrator_Key__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Integrator_Key__c</fullName>
    <defaultValue>&quot;2ceabed4-3a84-4220-9a76-9b1f9f0cf6ed&quot;</defaultValue>
    <inlineHelpText>DocuSign Integrator Key (https://docs.docusign.com/esign/guide/authentication/integrator_key.html) e.g. 2ceabed4-3a84-4220-9a76-9b1f9f0cf6ed</inlineHelpText>
    <label>DocuSign Integrator Key</label>
    <length>36</length>
    <type>Text</type>
</CustomField>