force-app/main/default/objects/System_Properties__c/fields/Finaled_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Finaled_Case_Owner__c</fullName>
    <inlineHelpText>Case owner that the CSCancellationService should use when creating a case after a utility account is finaled (Customer_Care, Partner_Support, etc)</inlineHelpText>
    <label>Finaled Case Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>