force-app/main/default/objects/System_Properties__c/fields/Google_Maps_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps_API_Key__c</fullName>
    <label>Google Maps API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>