force-app/main/default/objects/System_Properties__c/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <inlineHelpText>Maximum log level to log, Fine, Info, Debug, Warn, Error.</inlineHelpText>
    <label>Log Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>