force-app/main/default/objects/System_Properties__c/fields/Log_Limit_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Log_Limit_Threshold__c</fullName>
    <inlineHelpText>Overrides the log level for error logs with a Max Limit Used over this percent</inlineHelpText>
    <label>Log Limit Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>