force-app/main/default/objects/System_Properties__c/fields/Minimum_Balance_Bills_for_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Balance_Bills_for_Cancelled__c</fullName>
    <label>Minimum Balance Bills for Cancelled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>