force-app/main/default/objects/System_Properties__c/fields/Send_CS_Cancellation_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_CS_Cancellation_Emails__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, the CS Cancellation Service/Scheduler will send emails for Accounts removed from project, Cancellation confirmations, and Accounts that have cancelled and fully off projects.</inlineHelpText>
    <label>Send CS Cancellation Emails</label>
    <type>Checkbox</type>
</CustomField>