force-app/main/default/objects/System_Properties__c/fields/Send_Payment_Case_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_Payment_Case_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sends emails from the PaymentCaseCreator which runs after autopay</inlineHelpText>
    <label>Send Payment Case Emails</label>
    <type>Checkbox</type>
</CustomField>