force-app/main/default/objects/System_Properties__c/fields/System_Bill_Generation_Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>System_Bill_Generation_Grace_Period__c</fullName>
    <defaultValue>15</defaultValue>
    <inlineHelpText>Number of days past 30 to wait for System Bills to be generated, before the CSCancellationService determines that we&apos;ve stopped billing the customer. Used to handle the case where we don&apos;t generate bills on the 15th because of a weekend or holiday.</inlineHelpText>
    <label>System Bill Generation Grace Period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>