force-app/main/default/objects/System_Properties__c/fields/Update_Usage_Records_With_ZuoraId__c.field-meta.xml
<CustomField>
    <fullName>Update_Usage_Records_With_ZuoraId__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, UASB and Bill Adjustment fields &quot;Zuora Id&quot; will be updated when usage is uploaded to Zuora</inlineHelpText>
    <label>Update Usage Records With ZuoraId</label>
    <type>Checkbox</type>
</CustomField>