force-app/main/default/objects/System_Properties__c/fields/Use_Zuora_for_Payment_Capture__c.field-meta.xml
<CustomField>
    <fullName>Use_Zuora_for_Payment_Capture__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the CSAP and Portal will use Zuora for payment method capture</inlineHelpText>
    <label>Use Zuora for Payment Capture</label>
    <type>Checkbox</type>
</CustomField>