force-app/main/default/objects/System_Properties__c/fields/Use_Zuora_For_Subscription_Billing__c.field-meta.xml
<CustomField>
    <fullName>Use_Zuora_For_Subscription_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Creates new subscriptions and subscription rate plan charges in Zuora when Schedule Zs are enacted</inlineHelpText>
    <label>Use Zuora For Subscription Billing</label>
    <type>Checkbox</type>
</CustomField>