force-app/main/default/objects/System_Properties__c/fields/Zuora_Data_Query_Minutes_to_Retry__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Data_Query_Minutes_to_Retry__c</fullName>
    <inlineHelpText>We will resubmit a data query to Zuora after X number of minutes if it fails</inlineHelpText>
    <label>Zuora Data Query Minutes to Retry</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>