force-app/main/default/objects/System_Properties__c/fields/Zuora_Payment_Application_Retries__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Payment_Application_Retries__c</fullName>
    <defaultValue>3</defaultValue>
    <inlineHelpText>Number of times the ZuoraPaymentService will retry to apply a payment to wait for Zuora to release locks</inlineHelpText>
    <label>Zuora Payment Application Retries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>